--- a/.github/workflows/go-ossf-slsa3-publish.yml
+++ b/.github/workflows/go-ossf-slsa3-publish.yml
@@ -13,9 +13,8 @@
 
 name: SLSA Go releaser
 on:
-  workflow_dispatch:
-  release:
-    types: [created]
+  push:
+    tags: 'v*'
 
 permissions: read-all
 
